# hpi-fhfa

./: CLAUDE_CODE_SESSION_PANDAS.md  CLAUDE_CODE_SESSION_POLARS.md  CLAUDE_CODE_SESSION_PYSPARK.md  IMPLEMENTATION_PLAN_PANDAS.md  IMPLEMENTATION_PLAN_POLARS.md  IMPLEMENTATION_PLAN_PYSPARK.md  POC_ASSESSMENT.md  README.md
impl-pandas/: FINAL_TEST_RESULTS.md  IMPLEMENTATION_STATUS.md  PHASE_5_6_SUMMARY.md  README.md  TEST_RESULTS.md  check_implementation.py  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_tests.py  setup.py
impl-polars/: .coverage  .coverage.Ducs-MacBook-Pro.local.74238.XEJcBWcx  .coverage.Ducs-MacBook-Pro.local.74240.XissdYix  .flake8  .gitignore  Makefile  POLARS_MIGRATION_NOTES.md  README.md  TEST_REPORT.md  config.yaml  generate_benchmark_report.py  generate_documentation.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_output.txt  test_results.txt  test_results.xml
impl-polars/docs/: API.md  CONFIGURATION.md  EXAMPLES.md  MODULES.md  PERFORMANCE_BENCHMARK.md
impl-polars/docs/examples/: advanced_pipeline.py  basic_usage.py  batch_processing.py  performance_benchmark.py  validation_example.py
impl-polars/docs/notebooks/: 01_basic_tutorial.ipynb
impl-polars/rsai/: __init__.py
impl-polars/rsai/data/sample/: generate_sample_data.py
impl-polars/rsai/src/: __init__.py  main.py
impl-polars/rsai/src/data/: __init__.py  ingestion.py  models.py  validation.py
impl-polars/rsai/src/geography/: __init__.py  distance.py  supertract.py
impl-polars/rsai/src/index/: __init__.py  aggregation.py  bmn_regression.py  weights.py
impl-polars/rsai/src/output/: __init__.py  export.py
impl-polars/scripts/: example_usage.py
impl-polars/src/hpi_fhfa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
impl-polars/src/hpi_fhfa/config/: constants.py  settings.py
impl-polars/src/hpi_fhfa/data/: filters.py  loader.py  schemas.py  validators.py
impl-polars/src/hpi_fhfa/docs/: __init__.py  api_docs.py  examples.py
impl-polars/src/hpi_fhfa/indices/: city_level.py  tract_level.py
impl-polars/src/hpi_fhfa/models/: bmn_regression.py  supertract.py  weighting.py
impl-polars/src/hpi_fhfa/processing/: half_pairs.py  pipeline.py  repeat_sales.py
impl-polars/src/hpi_fhfa/utils/: exceptions.py  logging.py  performance.py
impl-polars/src/hpi_fhfa/validation/: __init__.py  benchmarks.py  validators.py
impl-polars/tests/: __init__.py  conftest.py  test_validation.py
impl-polars/tests/fixtures/: __init__.py  generate_test_data.py
impl-polars/tests/integration/: __init__.py  test_integration.py  test_pipeline.py
impl-polars/tests/unit/: __init__.py  test_bmn_regression.py  test_example.py  test_filters.py  test_repeat_sales.py  test_validators.py  test_weighting.py
impl-polars/tests/unit/data/: test_data_ingestion.py  test_data_models.py
impl-polars/tests/unit/geography/: test_supertract.py
impl-polars/tests/unit/index/: test_bmn_regression.py  test_weights.py
impl-polars/tests/unit/output/: test_export.py
impl-pyspark/: .coverage  .coveragerc  Dockerfile  FINAL_TEST_INFRASTRUCTURE_REPORT.md  FINAL_TEST_REPORT.md  PHASE5_IMPLEMENTATION_SUMMARY.md  README.md  TEST_REPORT.md  UPDATED_TEST_REPORT.md  config.json  docker-compose.yml  pytest.ini  (+5 more)
(+115 files in other folders)
