[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpi-fhfa"
version = "0.1.0"
description = "FHFA House Price Index implementation using Polars"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "HPI-FHFA Team", email = "team@hpi-fhfa.org" }
]
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.90.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "structlog>=23.2.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
distributed = [
    "dask[complete]>=2023.10.0",
    "ray>=2.8.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.scripts]
hpi-fhfa = "hpi_fhfa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/hpi_fhfa --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/hpi_fhfa"]
omit = ["*/tests/*", "*/config/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true